[gd_scene load_steps=2 format=3 uid="uid://t0mopc38lcrm"]

[ext_resource type="Script" uid="uid://b40rhypl8wr01" path="res://player_counter.gd" id="1_xw8yt"]

[node name="PlayerCounter" type="HBoxContainer"]
script = ExtResource("1_xw8yt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="Username" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"PlayerLabels"
text = "{USERNAME}"
fit_content = true

[node name="Points" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"PlayerLabels"
text = "POINTS: 2"
fit_content = true

[node name="CardCounter" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"PlayerLabels"
text = "0 Cards"
fit_content = true

[node name="DevCardCounter" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"PlayerLabels"
text = "0 Dev
Cards"
fit_content = true

[node name="ArmyCounter" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"PlayerLabels"
text = "0 Knights"
fit_content = true

[node name="RoadCounter" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"PlayerLabels"
text = "0 Roads"
fit_content = true
